--- a/views/email/template.hbs
+++ b/views/email/template.hbs
@@ -13,10 +13,10 @@
         <tbody>
           <tr>
             <td rowspan="4" style="padding:0 5.4pt;">
-              <img height="40" width="110" src="https://dxgpt.app/assets/img/logo-Dx29.png" alt="dxGPT">
+              <img height="40" width="110" src="https://dxgpt.app/assets/img/logo-Dx29.png" alt="DxGPT">
             </td>
             <td style="padding:0 5.4pt;">
-              <p style="font-size:11pt;font-family:Calibri,sans-serif;margin:0;"><span lang="es" style="font-size:9pt;">dxGPT Team</span><span lang="es" style="font-size:9pt;"></span></p>
+              <p style="font-size:11pt;font-family:Calibri,sans-serif;margin:0;"><span lang="es" style="font-size:9pt;">DxGPT Team</span><span lang="es" style="font-size:9pt;"></span></p>
             </td>
           </tr>
           <tr>
