--- a/views/email/mail_support/_es.hbs
+++ b/views/email/mail_support/_es.hbs
@@ -3,3 +3,4 @@
 <p>Asunto: {{info.subject}}</p>
 <p>Descripción: {{info.description}}</p>
 <p>Fecha: {{info.date}}</p>
+<p>Subscribe: {{info.subscribe}}</p>
