change labels email

--- a/views/email/mail_general_feedback/_es.hbs
+++ b/views/email/mail_general_feedback/_es.hbs
@@ -3,7 +3,7 @@
 <p>{{pregunta1}}</p>
 <p><b>¿Cómo calificarías tu experiencia general al usar nuestra herramienta?:</b></p>
 <p>{{pregunta2}}</p>
-<p><b>¿Hay alguna funcionalidad que desearías que estuviera en la herramienta?:</b></p>
+<p><b>Deje cualquier comentario o sugerencia:</b></p>
 <p>{{moreFunct}}</p>
 <p><b>Deje cualquier comentario que considere oportuno:</b></p>
 <p>{{freeText}}</p>
