added email de general feedback added flows to supports and general feedbacks

--- a/views/email/mail_general_feedback/_es.hbs
+++ b/views/email/mail_general_feedback/_es.hbs
@@ -7,3 +7,5 @@
 <p>{{moreFunct}}</p>
 <p><b>Deje cualquier comentario que considere oportuno:</b></p>
 <p>{{freeText}}</p>
+<p><b>Email</b></p>
+<p>{{email}}</p>
