added userType to feedback

--- a/views/email/mail_general_feedback/_es.hbs
+++ b/views/email/mail_general_feedback/_es.hbs
@@ -3,6 +3,8 @@
 <p>{{pregunta1}}</p>
 <p><b>¿Cómo calificarías tu experiencia general al usar nuestra herramienta?:</b></p>
 <p>{{pregunta2}}</p>
+<p><b>Tipo de usuario:</b></p>
+<p>{{userType}}</p>
 <p><b>Deje cualquier comentario o sugerencia:</b></p>
 <p>{{moreFunct}}</p>
 <p><b>Deje cualquier comentario que considere oportuno:</b></p>
