requited headers save tenant o subsc on support and feedback change flows for tenant change apidoc change validation api calls

--- a/views/email/mail_general_feedback/_es.hbs
+++ b/views/email/mail_general_feedback/_es.hbs
@@ -11,3 +11,7 @@
 <p>{{freeText}}</p>
 <p><b>Email</b></p>
 <p>{{email}}</p>
+<p><b>Tenant ID</b></p>
+<p>{{tenantId}}</p>
+<p><b>Subscription Key Hash</b></p>
+<p>{{subscriptionKeyHash}}</p>
