--- a/views/email/mail_support/_es.hbs
+++ b/views/email/mail_support/_es.hbs
@@ -4,3 +4,5 @@
 <p>Descripción: {{info.description}}</p>
 <p>Fecha: {{info.date}}</p>
 <p>Subscribe: {{info.subscribe}}</p>
+<p>Tenant ID: {{info.tenantId}}</p>
+<p>Subscription Key Hash: {{info.subscriptionKeyHash}}</p>
