--- a/views/email/mail_support/_es.hbs
+++ b/views/email/mail_support/_es.hbs
@@ -5,4 +5,4 @@
 <p>Fecha: {{info.date}}</p>
 <p>Subscribe: {{info.subscribe}}</p>
 <p>Tenant ID: {{info.tenantId}}</p>
-<p>Subscription Key Hash: {{info.subscriptionKeyHash}}</p>
+<p>Subscription ID: {{info.subscriptionId}}</p>
