added uuid on email support

--- a/views/email/mail_support/_es.hbs
+++ b/views/email/mail_support/_es.hbs
@@ -6,3 +6,4 @@
 <p>Subscribe: {{info.subscribe}}</p>
 <p>Tenant ID: {{info.tenantId}}</p>
 <p>Subscription ID: {{info.subscriptionId}}</p>
+<p>UUID: {{info.myuuid}}</p>
