--- a/views/email/mail_general_feedback/_es.hbs
+++ b/views/email/mail_general_feedback/_es.hbs
@@ -9,6 +9,10 @@
 <p>{{moreFunct}}</p>
 <p><b>Deje cualquier comentario que considere oportuno:</b></p>
 <p>{{freeText}}</p>
+<p><b>Model</b></p>
+<p>{{model}}</p>
+<p><b>File Names</b></p>
+<p>{{fileNames}}</p>
 <p><b>Email</b></p>
 <p>{{email}}</p>
 <p><b>Tenant ID</b></p>
