GDPR CHANGE GENE REQUEST, REPLACE nhs clean code

--- a/views/email/mail_error_gpt_ip/_es.hbs
+++ b/views/email/mail_error_gpt_ip/_es.hbs
@@ -1,4 +1,5 @@
 <p>Idioma: {{lang}}</p>
 <p>Info: {{info}}</p>
 <p>Response: {{response}}</p>
-<p>Request Info: {{requestInfo}}</p>
+<p>Tenant ID: {{tenantId}}</p>
+<p>Subscription ID: {{subscriptionId}}</p>
